# ipyelk

./: .coveragerc  .gitignore  .gitmodules  .prettierignore  .prettierrc  .readthedocs.yml  .travis.yml  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE.txt  MANIFEST.in  README.md  anaconda-project-lock.yml  anaconda-project.yml  appveyor.yml  codecov.yml  dodo.py  elk-widget.json  environment.yml  install.json  labextensions.txt  package-lock.json  package.json  pixi.toml  postBuild  pyproject.toml  pytest.ini  setup.cfg  setup.py  tsconfig.cov.json  tsconfig.json  tsconfig.tsbuildinfo  tsconfigbase.json  vale.ini  webpack.config.js
.binder/: environment.yml  postBuild
.ci/: environment.yml
.github/: .condarc  base-environment.yml  environment.yml  lock-environment.yml  requirements-build.txt
.github/env_specs/py/: 3.11.yml  3.7.yml
.github/env_specs/subdir/: linux-64.yml
.github/workflows/: ci.yml
atest/: Smoke.robot  __init__.robot
atest/Notebooks/: 00_Introduction.robot  01_Linking.robot  02_Transformer.robot  03_App.robot  04_Interactive.robot  05_SVG_Exporter.robot  06_SVG_App_Exporter.robot  07_Simulation.robot  08_Simulation_App.robot  10_Diagram_Defs.robot  11_Logic_Gates.robot  12_Node_Menagerie.robot  13_Compounds.robot  14_Text_Styling.robot  15_Nesting_Plots.robot  Examples.robot  Experiments.robot  Introduction.robot  __init__.robot
atest/_libraries/: Ports.py
atest/_resources/keywords/: Browser.robot  CLI.robot  Coverage.robot  IPyElk.robot  Lab.robot  LabCompat.robot  Meta.robot  Server.robot
atest/_resources/variables/: Browser.robot  IPyElk.robot  Lab.robot  Meta.robot  Server.robot
docs/: Makefile  conf.py  dictionary.txt  index.md  make.bat  rtd.yml  setup.cfg
docs/reference/: index.md  loaders.md  pipes.md  schema.rst  tools.md  transformers.md  widgets.md
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
elk/: __init__.py  _version.py  app.py  example.py  styled_widget.py  trait_types.py
elk/diagram/: __init__.py  elk_model.py  elk_widget.py
elk/nbextension/: __init__.py
elk/nbextension/static/: extension.js
elk/nx/: __init__.py  factors.py  nx.py  transformer.py
elk/schema/: elkschema.json  validator.py
elk/tests/: conftest.py  test_example.py  test_nbextension_path.py
elk/tools/: __init__.py  tools.py
examples/: 00_Introduction.ipynb  01_Linking.ipynb  02_Transformer.ipynb  03_App.ipynb  04_Interactive.ipynb  05_SVG_Exporter.ipynb  06_SVG_App_Exporter.ipynb  07_Simulation.ipynb  08_Simulation_App.ipynb  09_Doit_workflow.ipynb  100_node_label_placement.ipynb  101_text_sizer.ipynb  102_layout_options.ipynb  103_transformer_layout_options.ipynb  104_transformer_multi_label.ipynb  105_transformer_ports.ipynb  106_transformer_edges.ipynb  10_Diagram_Defs.ipynb  11_Logic_Gates.ipynb  12_Node_Menagerie.ipynb  13_Compounds.ipynb  14_Text_Styling.ipynb  14_elk_model_explorer.ipynb  15_Nesting_Plots.ipynb  _index.ipynb  flat_graph.json  hier_ports.json  hier_tree.json  introduction.ipynb  requirements.txt  simple.json
ipyelk/: __init__.py  _version.py  app.py  styled_widget.py  trait_types.py
ipyelk/diagram/: __init__.py  elk_model.py  elk_widget.py
ipyelk/nx/: __init__.py  factors.py  nx.py  transformer.py
ipyelk/schema/: __init__.py  elkschema.json  validator.py
ipyelk/tools/: __init__.py  tool.py  tools.py
js/: display_widget.ts  exporter.ts  index.ts  layout_widget.ts  measure_text.ts  patches.ts  plugin.ts  tokens.ts  tsconfig.cov.json  tsconfig.json  typings.d.ts
js/sprotty/: di-config.ts  diagram-server.ts  renderer.tsx  sprotty-model.ts  viewportModule.ts
js/sprotty/json/: elkgraph-json.ts  elkgraph-to-sprotty.ts  elkschema.ts  index.ts  symbols.ts
js/sprotty/update/: index.ts  smodel-utils.ts  update-model.ts
js/sprotty/views/: base.tsx  edge_views.tsx  graph_views.tsx  index.ts  node_views.tsx  symbol_views.tsx
js/tools/: draw-aware-mouse-listener.ts  expand.ts  index.ts  select.ts  tool.ts  types.ts  util.ts
js/tools/feedback/: cursor-feedback.ts  di.config.ts  feedback-action-dispatcher.ts  index.ts  model.ts  utils.ts
lite/: jupyter-lite.json  jupyter_lite_config.json
py_src/ipyelk/: __init__.py  _version.py  app.py  exceptions.py  styled_widget.py  toolbar.py  trait_types.py  transform.py  util.py
py_src/ipyelk/contrib/: __init__.py
py_src/ipyelk/diagram/: __init__.py  defs.py  diagram.py  elk_export.py  elk_model.py  elk_text_sizer.py  elk_widget.py  export.py  flow.py  layout_widgets.py  sprotty_viewer.py  svg.py  symbol.py  toolbar.py  viewer.py
py_src/ipyelk/elements/: __init__.py  common.py  compound.py  elements.py  extended.py  index.py  mark_factory.py  registry.py  serialization.py  shapes.py  symbol.py
py_src/ipyelk/json/: __init__.py  pipes.py
py_src/ipyelk/labextension/: package.json
py_src/ipyelk/layouting/: __init__.py  elkjs.py  engine.py
py_src/ipyelk/nx/: nx.py  (+6 more)
scripts/: __init__.py  atest.py  build-ext-cov.py  check-dist.py  lab.py  lock.py  migrate_models.py  nblint.py  preflight.py  project.py  pytest-check-links.toml  report-cov.py  report.py  reporter.py  utils.py  watch.py
scripts/not-a-package/: package.json
scripts/vale/: output.tmpl
src/: di-config.ts  diagram-server.ts  display_widget copy.ts  display_widget.ts  elkschema.ts  exporter.ts  index.ts  layout_widget.ts  measure_text.ts  plugin.ts  popup.ts  schema.json  sprotty-model.ts  tokens.ts  types.d.ts  typings.d.ts  version.ts  views.tsx  widget.ts
src/ipyelk/: __init__.py  constants.py  exceptions.py  js.py  styled_widget.py  trait_types.py  util.py
src/json/: elkgraph-to-sprotty.ts
src/sprotty/: di-config.ts  diagram-server.ts  renderer.ts  renderer.tsx  sprotty-model.ts  viewportModule.ts  views.tsx
src/tools/: draw-aware-mouse-listener.ts  expand.ts  index.ts  select.ts  tool.ts  types.ts  util.ts
style/: app.css  diagram.css  index.css  lab.css  pipe_status.css  view.css
tests/: conftest.py  test_meta.py
tests/elements/: test_nodes.py
tests/pipes/: test_pipes.py
tests/schema/: test_label_schema.py
tests/src/: index.spec.ts
(+198 files in other folders)
