[bdist_wheel]
universal=1

[metadata]
description-file = README.md 
license_file = LICENSE.txt

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache,.pytest-cache
extend-ignore = E203,W503
max-line-length = 88

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
