[metadata]
name = ipyelk
url = https://github.com/jupyrdf/ipyelk
project_urls =
    Bug Tracker = https://github.com/jupyrdf/ipyelk/issues
    Source Code = https://github.com/jupyrdf/ipyelk
description = ELK widget for Jupyter
long_description = file: ./README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
author = Dane Freeman
author_email = dane.freeman@gtri.gatech.edu
license = BSD-3-Clause
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Jupyter

[options]
python_requires = >=3.7
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    async_lru >=1,<2
    ipywidgets >=7.5.0
    jupyterlab >=3,<4
    jupyterlab_widgets >=1.0.0
    networkx

[options.packages.find]
where =
    py_src

[options.extras_require]
lint =
    black
    isort <5
    pyflakes
    flake8
utest =
    ansi2html
    hypothesis-jsonschema
    pytest-asyncio
    pytest-cov
    pytest-html
    pytest-xdist
atest =
    robotframework-seleniumlibrary
    robotframework-pabot
    robotframework-lint
dev =
    %(lint)s
    %(utest)s
    wheel
    twine
    doit

[tool:pytest]
junit_family = xunit2
addopts =
    -vv
    --ff
    --pyargs ipyelk
    --cov ipyelk
    --cov-report term-missing:skip-covered
    --cov-report html:build/htmlcov
    --no-cov-on-fail
    --html build/pytest.html
    --self-contained-html
    --junitxml build/pytest.xunit.xml

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache,.pytest-cache
extend-ignore = E203,W503
max-line-length = 88

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
